--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,8 @@
 repos:
+  - repo: https://github.com/necaris/pre-commit-pyright
+    rev: '1.1.53'
+    hooks:
+    - id: pyright
   - repo: local
     hooks:
       - id: isort
@@ -22,14 +26,3 @@ repos:
         entry: flake8
         require_serial: true
         types: [python]
-      - id: pyright
-        name: pyright
-        entry: pyright
-        language: node
-        pass_filenames: false
-        types: [python]
-        additional_dependencies: ["pyright@{{cookiecutter.pyright_version}}"]
-      - id: check_package_version
-        name: check_package_version
-        language: system
-        entry: python _scripts/check_package_version.py {{cookiecutter.package_name}}
