--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
-name = "csv-to-sql-insert"
+name = "table2sql"
 version = "0.1.0"
 description = ""
 authors = ["Piotr Gredowski <piotrgredowski@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+click = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
 bandit = "^1.7.0"
 black = "^21.7b0"
 flake8 = "^3.9.2"
@@ -16,9 +16,13 @@ flake8-debugger = "^4.0.0"
 ipdb = "^0.13.9"
 isort = "^5.9.3"
 pre-commit = "^2.14.0"
+pytest = "^6.2.4"
 pytest-cov = "^2.12.1"
 pytest-mock = "^3.6.1"
 rope = "^0.19.0"
+
+[tool.poetry.scripts]
+table2sql = "table2sql.cli:cli"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -56,4 +60,4 @@ multi_line_output = 3
 exclude = ['**/.eggs', '**/venv', '**/.venv']
 
 [tool.pytest.ini_options]
-addopts = "--doctest-modules --cov=csv_to_sql_insert --cov-branch --cov-report=xml --cov-report=html --junitxml=junit.xml"
+addopts = "--doctest-modules --cov=table2sql --cov-branch --cov-report=xml --cov-report=html --junitxml=junit.xml"
