--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,26 +3,19 @@ repos:
     rev: '1.1.53'
     hooks:
     - id: pyright
+  - repo: https://github.com/pre-commit/mirrors-isort
+    rev: 'v5.9.3'
+    hooks:
+    - id: isort
+  - repo: https://github.com/pycqa/flake8
+    rev: '3.9.2'
+    hooks:
+    - id: flake8
   - repo: local
     hooks:
-      - id: isort
-        name: isort
-        entry: isort
-        require_serial: true
-        language: python
-        language_version: python3
-        types_or: [cython, pyi, python]
-        args: ["--filter-files"]
-        minimum_pre_commit_version: "2.9.0"
       - id: black
         name: black
         language: system
         entry: black
-        require_serial: true
-        types: [python]
-      - id: flake8
-        name: flake8
-        language: system
-        entry: flake8
         require_serial: true
         types: [python]
