--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,22 +1,18 @@
-name: CI
-
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  release:
+    types:
+      - published
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+name: PyPI Publish
 
 jobs:
-  integration:
+  publish:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.9]
+    needs: integration
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
 
@@ -48,12 +44,8 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
-      - name: Run pre-commit on all files
-        run: |
-          poetry run pre-commit run --all-files
-
-      - name: Run tests
-        run: |
-          poetry run pytest
-
-      - uses: codecov/codecov-action@v2
+      - name: Build and publish to pypi
+        uses: JRubics/poetry-publish@v1.8
+        with:
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
+          python_version: ${{ matrix.python-version }}
