--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,7 @@ on:
   release:
     types:
       - published
+  workflow_dispatch:
 
 name: PyPI Publish
 
@@ -11,7 +12,6 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9]
-    needs: integration
     if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v2
@@ -44,8 +44,17 @@ jobs:
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
         run: poetry install --no-interaction --no-root
 
-      - name: Build and publish to pypi
-        uses: JRubics/poetry-publish@v1.8
-        with:
-          pypi_token: ${{ secrets.PYPI_TOKEN }}
-          python_version: ${{ matrix.python-version }}
+      - name: Run pre-commit on all files
+        run: |
+          poetry run pre-commit run --all-files
+
+      - name: Run tests
+        run: |
+          poetry run pytest
+
+      - name: Publish to PyPI
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: |
+          poetry config pypi-token.pypi $PYPI_TOKEN
+          poetry publish --build
