--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ on:
     # Sequence of patterns matched against refs/tags
     tags:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  workflow_dispatch:
 
 name: Create Release
 
@@ -36,9 +37,13 @@ jobs:
           virtualenvs-create: true
           virtualenvs-in-project: true
 
-      - name: Add Poetry to $PATH
+      - name: Run pre-commit on all files
         run: |
-          echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+          poetry run pre-commit run --all-files
+
+      - name: Run tests
+        run: |
+          poetry run pytest
 
       - name: Add version to environment vars
         run: |
