Add urls to project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,14 @@
 [tool.poetry]
 name = "table2sql"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Piotr Gredowski <piotrgredowski@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 description = ""
+homepage = "https://github.com/piotrgredowski/table2sql"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/piotrgredowski/table2sql/issues"
 
 [tool.poetry.dependencies]
 python = ">=3.6,<4"
