--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,12 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.local  # the path depends on the OS
-          key: poetry-0  # increment to reset cache
+          key: poetry-1  # increment to reset cache
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
+          version: 1.2.0a2
           virtualenvs-create: true
           virtualenvs-in-project: true
 
