--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,12 @@ classifiers = [
 "Bug Tracker" = "https://github.com/piotrgredowski/table2sql/issues"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.6.0,<4.0.0"
 click = "^8.0.1"
 openpyxl = "^3.0.7"
+
+[tool.poetry.group.dev.dependencies]
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.0"
@@ -39,7 +42,7 @@ rope = "^0.19.0"
 table2sql = "table2sql.cli:cli"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.2.0a2"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
