--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pytest = "^6.2.4"
 
 [tool.poetry.group.docs.dependencies]
 Pygments = "^2.10.0"
-mkdocs = "^1.2.2"
+mkdocs = ">=1.2.3,<2.0.0"
 mkdocs-click = {version = "^0.4.0", python = ">3.6,<4.0"}
 mkdocs-material = "^7.2.6"
 mkdocstrings = "^0.15.2"
