--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ classifiers = [
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
 ]
 description = ""
 homepage = "https://github.com/piotrgredowski/table2sql"
