--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,9 @@ openpyxl = "^3.0.7"
 python = ">=3.6.2,<4.0"
 
 [tool.poetry.group.dev.dependencies]
-rope = "^0.19.0"
 toml = "^0.10.2"
 pytest = "^6.2.4"
+rope = "1.1.1"
 
 [tool.poetry.group.docs.dependencies]
 Pygments = "^2.10.0"
