--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,17 +6,22 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.9]
+        os: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
 
       - name: Load cached Poetry installation
         uses: actions/cache@v2
         with:
           path: ~/.local # the path depends on the OS
-          key: poetry-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}
+          key: poetry-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -30,7 +35,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: .venv
-          key: virtualenv-${{ runner.os }}-${{ hashFiles('**/poetry.lock') }}-1
+          key: virtualenv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}-1
 
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
